# core

./: CMakeLists.txt  CMakeLists.txt.user.48f3c06  PKGBUILD
build-notificationd-Desktop-Debug/: CMakeCache.txt
build-shutdown-ui-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-shutdown-ui-Desktop-Debug/.qtc_clangd/: compile_commands.json
chotkeys/: application.cpp  hotkeys.cpp  main.cpp
clipboard/: CMakeLists.txt  clipboard.cpp
cpufreq/: CMakeLists.txt  com.matsya.cpufreq.pkexec.policy.in  main.cpp
gmenuproxy/: CMakeLists.txt  matsya-gmenuproxy.service.in
notificationd/: CMakeLists.txt  application.cpp  com.matsya.Notification.xml  historymodel.cpp  notificationserver.cpp  settings.cpp
notificationd/qml/: IconButton.qml  NotificationWindow.qml  QmlNotificationPopup.qml  main.qml
pkg/core/: .BUILDINFO  .MTREE  .PKGINFO
polkit-agent/: CMakeLists.txt  main.cpp  main.qml  matsya-polkit-agent.desktop
powerman/: CMakeLists.txt  application.cpp  com.matsya.PowerManager.xml
powerman/cpu/: cpumanagement.cpp  (+1 more)
screen-brightness/: CMakeLists.txt  com.matsya.brightness.pkexec.policy.in
sddm-helper/: CMakeLists.txt  com.matsya.sddm.helper.pkexec.policy.in
session/: CMakeLists.txt  application.cpp  com.matsya.Session.xml  matsya-xsession.desktop  networkproxymanager.cpp  processmanager.cpp
settings-daemon/: CMakeLists.txt  application.cpp
shutdown-ui/: CMakeLists.txt  IconButton.qml  main.cpp  main.qml
widgets/: CMakeLists.txt  actions.cpp  actions.h  main.cpp  main.qml  qml.qrc
xembed-sni-proxy/: CMakeLists.txt  debug.cpp
(+96 files in other folders)
